# Sistema-Recuperaci-n

./: .gitignore  MEMORIA DEL PROYECTO SRI.docx  Memoria de Mejoras.docx  Practica 1.1.py  Practica1.1.py  Practica1_1.py  Practica1_2.py  Practica1_3.py  Practica1_4.py  Practica1_5.py  Practica1_6.py  Practica1_7.py  README.md  config.json  main.py  main2.py  pyproject.toml  resultado_consulta_1.txt  resultado_consulta_2.txt  resultado_consulta_3.txt  resultado_consulta_4.txt  resultado_consulta_5.txt
IDF/: IDF.json
doc2id/: doc2id.json
id2doc/: id2doc.json
id2term/: id2term  id2term.json
indice_invertido/: 10004t  10071t  10190t  10195t  10285t  10288t  10347t  10367t  10441t  10449t  1049t  10552t  10648t  10709t  10777t  10813t  10882t  10902t  10918t  1093t  10979t  11097t  11125t  11233t  11403t  11543t  11577t  11578t  11581t  1160t  11627t  11658t  11682t  1180t  11849t  12088t  12104t  12130t  12305t  1301t  (+169 more)
stemmer/: S0211-69952009000500006.json  S0211-69952009000500007.json  S0211-69952009000500008.json  S0211-69952009000500009.json  S0211-69952009000500010.json  S0211-69952009000500011.json  S0211-69952009000500012.json  S0211-69952009000600003.json  S0211-69952009000600009.json  S0211-69952009000600010.json  S0211-69952009000600011.json  S0211-69952009000600012.json  S0211-69952009000600013.json  S0211-69952009000600014.json  S0211-69952010000100006.json  S0211-69952010000100007.json  S0211-69952010000100008.json  S0211-69952010000100009.json  S0211-69952010000100011.json  S0211-69952010000100012.json  S0211-69952010000100013.json  (+978 more)
term2id/: term2id  (+1 more)
(+1998 files in other folders)
